@@ -17,13 +17,12 @@ local CLOSE = CLOSE
 
 local ChangeLogData = {
 	"Changes:",
-		"• Follow the recent BigWigs API changes and BigWigs Skin update.",
-		"• Add chat commands /cleanboa = Remove Heirlooms from your bag.",
-		"• /repop, /release = Release spirit if the dialog doesn't show up.",
-		"• Adjust the pet Frame position.",
-		"• Let the minimap border blink, if you have new mail/invites.",
-		"• Create a button glow animation.",
-		"• Adjust the Style Panel size for bigger resolutions.",
+		"• Remove the UIButton module.",
+		"• Create own UIButtons attached on the Left Chat Panel.",
+		"• The MicroBar hides now also in Pet Battle, if Combat hide is selected.",
+		"• Remove the right click function from the MicroBar.",
+		"• Add a 'NoBackdrop' option to the Location Panel.",
+		"• Small Layout adjustments.",
 		-- "• ",
 	" ",
 	"Notes:",
